헤더 라우팅 및 갤러리컴포넌트 작업 중

--- a/src/app/_components/header/header.component.html
+++ b/src/app/_components/header/header.component.html
@@ -5,10 +5,10 @@
     </div>
 
     <div class="absolute hbox ml(38%)">
-        <div class="font(20) Inter c(#fff) mr(20%)">Home</div>
-        <div class="font(20) Inter c(#fff) mr(20%)">PlayGround</div>
-        <div class="font(20) Inter c(#fff) mr(20%)">Gallery</div>
-        <div class="font(20) Inter c(#fff) mr(20%)">Boards</div>
+        <div class="font(20) Inter c(#fff) mr(20%)" (click)="onClickRouter('')">Home</div>
+        <div class="font(20) Inter c(#fff) mr(20%)" (click)="onClickRouter('')">PlayGround</div>
+        <div class="font(20) Inter c(#fff) mr(20%)" (click)="onClickRouter('gallery')">Gallery</div>
+        <div class="font(20) Inter c(#fff) mr(20%)" (click)="onClickRouter('')">Boards</div>
     </div>
 
     <div class="absolute hbox ml(87%)">
