--- a/src/app/_routes/route-playground/route-playground.component.html
+++ b/src/app/_routes/route-playground/route-playground.component.html
@@ -1,2 +1,9 @@
-<app-header></app-header>
-<app-sidebar></app-sidebar>
+<header>
+    <app-header></app-header>
+</header>
+<div class="display(flex) h(100%) w(100%)">
+    <app-sidebar></app-sidebar> 
+    <app-playground-home class="w(100%)"></app-playground-home>   
+    <!-- Mark : 이거 width 100% 채우면 헤더 범위 벗어나는데 이 부분 수정 부탁드립니다,,, -->
+</div>
+
