프론트 UI 수정

--- a/src/app/_components/sidebar/sidebar.component.html
+++ b/src/app/_components/sidebar/sidebar.component.html
@@ -1,34 +1,50 @@
 <aside class="vbox w(270) h(100%) bg(black) p(20)">
-    <div class="w(230) h(47) r(10) items">
-        <span class="ml(15) font(20) Inter c(#fff) ">VIDEOS<br/></span>
-        <span class="mr(15)">
-            <svg width="13" height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M6.5 12L0.00480938 0.75L12.9952 0.75L6.5 12Z" fill="white"/>
-            </svg>                
-        </span>
-    </div>
-    <div>
+  <div class="w(230) h(47) r(10) items pointer">
+    <span class="ml(15) font(20) Inter c(#fff)">VIDEOS<br /></span>
+    <span class="mr(15)">
+      <svg
+        width="13"
+        height="12"
+        viewBox="0 0 13 12"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path d="M6.5 12L0.00480938 0.75L12.9952 0.75L6.5 12Z" fill="white" />
+      </svg>
+    </span>
+  </div>
 
-    </div>
-    <div class="w(230) h(47) r(10) items">
-        <span class="ml(15) font(20) Inter c(#fff) ">IMAGES<br/></span>
-        <span class="mr(15)">
-            <svg width="13" height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M6.5 12L0.00480938 0.75L12.9952 0.75L6.5 12Z" fill="white"/>
-            </svg>                
-        </span>
-    </div>
+  <div class="w(230) h(47) r(10) items pointer">
+    <span class="ml(15) font(20) Inter c(#fff)">IMAGES<br /></span>
+    <span class="mr(15)">
+      <svg
+        width="13"
+        height="12"
+        viewBox="0 0 13 12"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path d="M6.5 12L0.00480938 0.75L12.9952 0.75L6.5 12Z" fill="white" />
+      </svg>
+    </span>
+  </div>
 
-    <div class="w(230) h(47) r(10) items">
-        <span class="ml(15) font(20) Inter c(#fff) ">MUSIC<br/></span>
-        <span class="mr(15)">
-            <svg width="13" height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M6.5 12L0.00480938 0.75L12.9952 0.75L6.5 12Z" fill="white"/>
-            </svg>                
-        </span>
-    </div>
+  <div class="w(230) h(47) r(10) items pointer">
+    <span class="ml(15) font(20) Inter c(#fff)">MUSIC<br /></span>
+    <span class="mr(15)">
+      <svg
+        width="13"
+        height="12"
+        viewBox="0 0 13 12"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path d="M6.5 12L0.00480938 0.75L12.9952 0.75L6.5 12Z" fill="white" />
+      </svg>
+    </span>
+  </div>
 
-    <div class="w(230) h(47) r(10) items">
-        <span class="ml(15) font(20) Inter c(#fff) ">WORKSPACE<br/></span>
-    </div>
-  </aside>
+  <div class="w(230) h(47) r(10) items pointer">
+    <span class="ml(15) font(20) Inter c(#fff)">WORKSPACE<br /></span>
+  </div>
+</aside>
