--- a/src/app/_routes/route-gallery/gallery-home/gallery-home.component.html
+++ b/src/app/_routes/route-gallery/gallery-home/gallery-home.component.html
@@ -1,157 +1,76 @@
-<div class="w(100%) h(100%) bg(black)">
-    <div class="w(100%) h(380) bg(#A6A6A6)">
-        <div class="relative hbox left(700) top(150) w(690) h(70) r(10) bg(#2c2c2c)">
-            <div class="relative left(10) w(153) h(49) bg(#4b4b4b) r(10)"></div>
-            <div class="relative left(15) w(66%) h(65)">
-                <input class="w(100%) h(100%)" type="text"/>
-            </div>
-            <div class="relative left(30) w(30) h(30)">
-                <svg width="37" height="37" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="13.5192" cy="13.5192" r="12.0192" stroke="#ACACAC" stroke-width="3"/>
-                    <line x1="20.9838" y1="21.7089" x2="35.2145" y2="35.9396" stroke="#ACACAC" stroke-width="3"/>
-                </svg>                    
-            </div>
-        </div>
-
-        <!-- <div class="absolute x(631) y(293) w(690) h(74)">
-            <div class="absolute w(690) h(74) bg(#2c2c2c) r(10)"></div>
-            <div class="absolute x(17) y(12) w(153) h(49) bg(#4b4b4b) r(10)"></div>
-        
-            <figure class="block absolute x(130) y(21) w(15) h(15)" data-asset-id="531:1746" src="Rectangle 122"></figure>
-        
-            <figure class="block absolute x(634) y(21) w(34) h(37)" data-asset-id="531:1742" src="search icon"></figure>
-        
-          </div> -->
-    </div>
-
-</div>
-
-<div class="relative w(1920) h(1650) bg(#000) clip">
-    <div class="absolute x(302) y(747) w(1315) h(1230)">
-      <div class="absolute x(945) y(410) w(84) h(28) font(24) Inter c(#acacac)">123</div>
-  
-      <figure class="block absolute x y(1) w(413) h(554)" data-asset-id="525:1466" src="Rectangle 171"></figure>
-  
-      <figure class="block absolute x(5) y(567) w(26) h(28)" data-asset-id="525:1474" src="heart 8"></figure>
-  
-      <div class="absolute x(133) y(567) w(82) h(28) font(24) Inter c(#acacac)">12</div>
-  
-      <figure class="block absolute x(455) y(850) w(413) h(380)" data-asset-id="525:1469" src="Rectangle 174"></figure>
-  
-      <div class="absolute x(40) y(567) w(84) h(28) font(24) Inter c(#acacac)">123</div>
-  
-      <figure class="block absolute x(99) y(567) w(25) h(28)" data-asset-id="525:1477" src="chat 8"></figure>
-  
-      <figure class="block absolute x(455) y(500) w(413) h(301)" data-asset-id="525:1468" src="Rectangle 173"></figure>
-  
-      <figure class="block absolute x(910) y(450) w(405) h(493)" data-asset-id="525:1467" src="Rectangle 172"></figure>
-  
-      <figure class="block absolute x(2) y(610) w(413) h(518)" data-asset-id="525:1471" src="Rectangle 225"></figure>
-  
-      <div class="absolute x(2) y(610) w(413) h(518) bg(#d9d9d9) r(10)"></div>
-  
-      <figure class="block absolute x(910) y w(405) h(392)" data-asset-id="525:1473" src="Rectangle 177"></figure>
-  
-      <figure class="block absolute x(8) y(1143) w(26) h(28)" data-asset-id="525:1478" src="heart 14"></figure>
-  
-      <div class="absolute x(43) y(1143) w(84) h(28) font(24) Inter c(#acacac)">123</div>
-      <div class="absolute x(136) y(1143) w(82) h(28) font(24) Inter c(#acacac)">12</div>
-      <div class="absolute x(592) y(812) w(82) h(28) font(24) Inter c(#acacac)">12</div>
-  
-      <figure class="block absolute x(102) y(1143) w(25) h(28)" data-asset-id="525:1481" src="chat 14"></figure>
-  
-      <figure class="block absolute x(464) y(812) w(26) h(28)" data-asset-id="525:1482" src="heart 16"></figure>
-  
-      <div class="absolute x(499) y(812) w(84) h(28) font(24) Inter c(#acacac)">123</div>
-      <div class="absolute x(583) y(456) w(82) h(28) font(24) Inter c(#acacac)">12</div>
-      <div class="absolute x(490) y(456) w(84) h(28) font(24) Inter c(#acacac)">123</div>
-  
-      <figure class="block absolute x(558) y(812) w(25) h(28)" data-asset-id="525:1485" src="chat 16"></figure>
-  
-      <figure class="block absolute x(455) y(456) w(26) h(28)" data-asset-id="525:1486" src="heart 15"></figure>
-  
-      <figure class="block absolute x(911) y(955) w(26) h(28)" data-asset-id="525:1490" src="heart 18"></figure>
-  
-      <figure class="block absolute x(549) y(456) w(25) h(28)" data-asset-id="525:1489" src="chat 15"></figure>
-  
-      <div class="absolute x(946) y(955) w(84) h(28) font(24) Inter c(#acacac)">123</div>
-      <div class="absolute x(1039) y(955) w(82) h(28) font(24) Inter c(#acacac)">12</div>
-  
-      <figure class="block absolute x(1005) y(955) w(25) h(28)" data-asset-id="525:1493" src="chat 18"></figure>
-  
-      <figure class="block absolute x(910) y(410) w(26) h(28)" data-asset-id="525:1494" src="heart 17"></figure>
-  
-      <figure class="block absolute x(910) y(995) w(405) h(205)" data-asset-id="525:1501" src="Rectangle 179"></figure>
-  
-      <div class="absolute x(1038) y(410) w(82) h(28) font(24) Inter c(#acacac)">12</div>
-  
-      <figure class="block absolute x(455) y w(413) h(445)" data-asset-id="525:1472" src="Rectangle 176"></figure>
-  
-      <figure class="block absolute x(1004) y(410) w(25) h(28)" data-asset-id="525:1497" src="chat 17"></figure>
-  
-      <div class="absolute x(15) y(482) w(400) h(48) font(22) Inter c(#fff)">A wide angle street level photo of a busy street in Versova, Mumbai...</div>
-      <div class="absolute x(56) y(23) w(200) h(27) font(25) Inter c(#000)">Waynehills</div>
-  
-      <figure class="block absolute x(15) y(19) w(31) h(34) r(100%)" data-asset-id="525:1499" src="Ellipse 20"></figure>
-  
-      <div class="absolute x(15) y(440) w(200) h(30) font(28) Inter semi bold c(#fff)">Street view</div>
-    </div>
-    <div class="absolute x(305) y(679) w(311) h(43)">
-  
-      <figure class="block absolute x(6) y(3) w(26) h(25)" data-asset-id="525:1574" src="trend 1"></figure>
-  
-      <div class="absolute x(39) y font(26.000001907348633) Inter c(#fff) text(center)">Trending</div>
-      <div class="absolute x(225) y font(26.000001907348633) Inter c(#fff) text(center)">Recent</div>
-  
-      <figure class="block absolute x(188) y(3) w(26) h(26)" data-asset-id="525:1512" src="clock 1"></figure>
-  
-      <div class="absolute x y(43) w(158) h(0) b(#fff) bw(3)"></div>
-    </div>
-  
-    <figure class="block absolute x y(102) w(1913) h(404)" data-asset-id="531:1750" src="배경이미지"></figure>
-  
-    <div class="absolute x(631) y(293) w(690) h(74)">
-      <div class="absolute w(690) h(74) bg(#2c2c2c) r(10)"></div>
-      <div class="absolute x(17) y(12) w(153) h(49) bg(#4b4b4b) r(10)"></div>
-  
-      <figure class="block absolute x(130) y(21) w(15) h(15)" data-asset-id="531:1746" src="Rectangle 122"></figure>
-  
-      <figure class="block absolute x(634) y(21) w(34) h(37)" data-asset-id="531:1742" src="search icon"></figure>
-  
-    </div>
-    <div class="absolute x(822) y(558) w(280) h(46)">
-      <div class="absolute x(167) y(6) w(80) h(28) font(26.000001907348633) Inter c(#fffdfd)">image</div>
-      <div class="absolute x(8) y w(123) h(44) bg(#fff) r(39) box-shadow(inset/0/4/4/#000.25)"></div>
-      <div class="absolute x y(2) w(280) h(44)"></div>
-      <div class="absolute x(36) y(6) w(80) h(28) font(26.000001907348633) Inter c(#2c2c2c)">video</div>
-    </div>
-    <div class="absolute x(50) y(35) w(1836) h(67)">
-      <div class="absolute x(1097) y(11) font(20) Inter c(#fff)">Boards</div>
-      <div class="absolute x(941) y(67) w(82) h(0) b(#c77ff3) bw(4)"></div>
-      <div class="absolute x(621) y(11) font(20) Inter c(#fff)">Home</div>
-      <div class="absolute x(759) y(11) font(20) Inter c(#fff)">Playground</div>
-      <div class="absolute x(948) y(11) font(20) Inter c(#fff)">Gallery</div>
-      <div class="absolute x(1760) y w(76) h(45)">
-  
-        <figure class="block absolute x(62) y(12) w(10) h(10)" data-asset-id="531:1747" src="Rectangle 256"></figure>
-  
-        <figure class="block absolute w(45) h(45)" data-asset-id="521:248" src="Rectangle 228"></figure>
-  
+<div class="relative w(100%) h(100%) bg(black)">
+  <div class="w(100%) h(380) bg(#A6A6A6) hbox pack">
+    <div class="hbox w(690) h(60) r(10) bg(#2c2c2c)">
+      <div class="hbox pack w(153) h(50) bg(#4b4b4b) r(10) m(10)">
+        <p class="font(20) color(white) bold">Image</p>
       </div>
-      <div class="absolute x(1601) y(12) w(130) h(24)">
-        <div class="absolute x(37) y(1) w(93) font(18) Inter c(#fffdfd)">English</div>
-  
-        <figure class="block absolute x(113) y(1) w(10) h(10)" data-asset-id="546:2001" src="Rectangle 257"></figure>
-  
-        <figure class="block absolute w(24) h(24)" data-asset-id="546:2002" src="global 2"></figure>
-  
+      <div class="w(450) h(50) r(10)">
+        <input
+          class="w(100%) h(100%) r(10) p(9) font(20)"
+          placeholder="Please enter a search term"
+          type="text"
+        />
       </div>
-  
-      <figure class="block absolute w(220) h(50)" data-asset-id="531:1748" src="logo"></figure>
-  
+      <div class="w(30) h(30) ml(20) mb(5) pointer">
+        <svg
+          width="37"
+          height="37"
+          viewBox="0 0 37 37"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <circle
+            cx="13.5192"
+            cy="13.5192"
+            r="12.0192"
+            stroke="#ACACAC"
+            stroke-width="3"
+          />
+          <line
+            x1="20.9838"
+            y1="21.7089"
+            x2="35.2145"
+            y2="35.9396"
+            stroke="#ACACAC"
+            stroke-width="3"
+          />
+        </svg>
+      </div>
     </div>
-  
-    <figure class="block absolute x(1734) y(1474) w(124) h(169)" data-asset-id="525:1507" src="chatbot"></figure>
-  
-    <div class="absolute x(1904) y(173) w(9) h(150) bg(#6d6d6d) r(30)"></div>
   </div>
+  <div class="vbox">
+    <div class="h(70) hbox pack">
+      <div
+        class="w(150) h(40) r(40) font(20) color(white) bold pack b(white) m(20) pointer"
+      >
+        Video
+      </div>
+      <div
+        class="w(150) h(40) r(40) font(20) color(white) bold pack b(white) m(20) pointer"
+      >
+        Image
+      </div>
+    </div>
+    <div class="h(100%) hbox pack">
+      <div class="vbox w(1000) h(600) p(30)">
+        <div class="hbox w(100%) gap(20)">
+          <div class="w(100) font(20) color(white) bold bb(3/white) pack">
+            Tranding
+          </div>
+          <div class="w(100) font(20) color(white) bold pack">Recent</div>
+        </div>
+        <div class="w(100%) h(100%) hbox gap(20) flex-wrap pack p(20)">
+          <div class="w(270) h(300) bg(gray)"></div>
+          <div class="w(270) h(300) bg(gray)"></div>
+          <div class="w(270) h(300) bg(gray)"></div>
+          <div class="w(270) h(300) bg(gray)"></div>
+          <div class="w(270) h(300) bg(gray)"></div>
+          <div class="w(270) h(300) bg(gray)"></div>
+          <div class="w(270) h(300) bg(gray)"></div>
+          <div class="w(270) h(300) bg(gray)"></div>
+          <div class="w(270) h(300) bg(gray)"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
