--- a/src/app/_routes/route-gallery/route-gallery.component.html
+++ b/src/app/_routes/route-gallery/route-gallery.component.html
@@ -1,4 +1,8 @@
-<header>
+<div class="relative vhbox h(170vh) clip user-select-none">
+  <header>
     <app-header></app-header>
-</header>
-<app-gallery-home></app-gallery-home>
+  </header>
+  <div class="hbox h(100%) w(100%)">
+    <app-gallery-home class="relative w(100%) h(100%)"></app-gallery-home>
+  </div>
+</div>
