--- a/src/app/_components/sidebar/sidebar.component.html
+++ b/src/app/_components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <aside class="vbox w(270) h(100%) bg(black) p(20)">
-  <div class="w(230) h(47) r(10) items pointer">
-    <span class="ml(15) font(20) Inter c(#fff)">VIDEOS<br /></span>
-    <span class="mr(15)">
+  <div class="vbox w(230) r(10) items pointer">
+    <div class="hbox space-between w(100%) p(10)">
+      <span class="font(20) Inter c(#fff)">VIDEOS<br /></span>
       <svg
         width="13"
         height="12"
@@ -11,12 +11,20 @@
       >
         <path d="M6.5 12L0.00480938 0.75L12.9952 0.75L6.5 12Z" fill="white" />
       </svg>
-    </span>
+    </div>
+    <div class="vbox(left) w(100%) ml(30) gap(3)" #VideoList>
+      <li class="color(grey) font(18)" style="list-style: none">
+        - Text to Video
+      </li>
+      <li class="color(grey) font(18)" style="list-style: none">
+        - Text to Interactiv Video
+      </li>
+    </div>
   </div>
 
-  <div class="w(230) h(47) r(10) items pointer">
-    <span class="ml(15) font(20) Inter c(#fff)">IMAGES<br /></span>
-    <span class="mr(15)">
+  <div class="vbox w(230) r(10) items pointer">
+    <div class="hbox space-between w(100%) p(10)">
+      <span class="font(20) Inter c(#fff)">IMAGES<br /></span>
       <svg
         width="13"
         height="12"
@@ -26,12 +34,23 @@
       >
         <path d="M6.5 12L0.00480938 0.75L12.9952 0.75L6.5 12Z" fill="white" />
       </svg>
-    </span>
+    </div>
+    <div class="vbox(left) w(100%) ml(30) gap(3)" #ImageList>
+      <li class="color(grey) font(18)" style="list-style: none">
+        - Text to Image
+      </li>
+      <li class="color(grey) font(18)" style="list-style: none">
+        - Text to Picasso
+      </li>
+      <li class="color(grey) font(18)" style="list-style: none">
+        - Text to Charcter
+      </li>
+    </div>
   </div>
 
-  <div class="w(230) h(47) r(10) items pointer">
-    <span class="ml(15) font(20) Inter c(#fff)">MUSIC<br /></span>
-    <span class="mr(15)">
+  <div class="vbox w(230) r(10) items pointer">
+    <div class="hbox space-between w(100%) p(10)">
+      <span class="font(20) Inter c(#fff)">MUSIC<br /></span>
       <svg
         width="13"
         height="12"
@@ -41,10 +60,12 @@
       >
         <path d="M6.5 12L0.00480938 0.75L12.9952 0.75L6.5 12Z" fill="white" />
       </svg>
-    </span>
+    </div>
   </div>
 
-  <div class="w(230) h(47) r(10) items pointer">
-    <span class="ml(15) font(20) Inter c(#fff)">WORKSPACE<br /></span>
+  <div class="vbox w(230) r(10) items pointer">
+    <div class="hbox space-between w(100%) p(10)">
+      <span class="font(20) Inter c(#fff)">WORKSPACE<br /></span>
+    </div>
   </div>
 </aside>
