라우터 수정, 메인 ui수정

--- a/src/app/_components/header/header.component.html
+++ b/src/app/_components/header/header.component.html
@@ -13,7 +13,12 @@
     >
       Home
     </div>
-    <div class="font(20) Inter c(#fff) mr(20%) pointer">PlayGround</div>
+    <div
+      class="font(20) Inter c(#fff) mr(20%) pointer"
+      (click)="onClickRouter('playground')"
+    >
+      PlayGround
+    </div>
     <div
       class="font(20) Inter c(#fff) mr(20%) pointer"
       (click)="onClickRouter('gallery')"
