--- a/src/app/_components/sidebar/sidebar.component.html
+++ b/src/app/_components/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <aside class="vbox w(270) h(100%) bg(black) p(20)">
-  <div class="vbox w(230) r(10) items pointer">
+  <div class="vbox w(230) r(10) items pointer " (click)="toggleMenu()">
     <div class="hbox space-between w(100%) p(10)">
       <span class="font(20) Inter c(#fff)">VIDEOS<br /></span>
       <svg
@@ -8,11 +8,11 @@
         viewBox="0 0 13 12"
         fill="none"
         xmlns="http://www.w3.org/2000/svg"
-      >
+        >
         <path d="M6.5 12L0.00480938 0.75L12.9952 0.75L6.5 12Z" fill="white" />
       </svg>
     </div>
-    <div class="vbox(left) w(100%) ml(30) gap(3)" #VideoList>
+    <div class="vbox(left) w(100%) ml(30) gap(3)" #VideoList *ngIf="isMenuOpen">
       <li class="color(grey) font(18)" style="list-style: none">
         - Text to Video
       </li>
