--- a/src/app/_components/text-to-image/text-to-image.component.html
+++ b/src/app/_components/text-to-image/text-to-image.component.html
@@ -1,27 +1,19 @@
-<div class = "hbox w(100%) h(100%) bg(#1A1A1A)">
+<div class="hbox w(100%) h(100%) bg(#1A1A1A)">
+  <div class="hbox w(800) h(1080) p(30)">
+    <div class="w(100%)">
+      <div class="font(30) Inter Semi Bold c(white) mb(20)">
+        <p>Text to Image</p>
+      </div>
 
-    <div class = "hbox w(800) h(1080) p(30)"> 
-        <div class = "w(100%)">
-            <div class =" font(30) Inter Semi Bold c(white) mb(20)">
-                <p>Text to Image</p>
-            </div>
-
-            <div class="relative w(799) h(768)">
-                <div class="absolute w(799) hbox(top) flex-wrap gap(33)">
-                  <div class="w(383) h(370) bg(#d9d9d9)"></div>
-                  <div class="w(383) h(370) bg(#d9d9d9)"></div>
-                  <div class="w(383) h(370) bg(#d9d9d9)"></div>
-                  <div class="w(383) h(370) bg(#d9d9d9)"></div>
-                </div>
-            </div>
-            
-
-            
+      <div class="relative w(799) h(768)">
+        <div class="absolute w(799) hbox(top) flex-wrap gap(33)">
+          <div class="w(383) h(370) bg(#d9d9d9)"></div>
+          <div class="w(383) h(370) bg(#d9d9d9)"></div>
+          <div class="w(383) h(370) bg(#d9d9d9)"></div>
+          <div class="w(383) h(370) bg(#d9d9d9)"></div>
         </div>
-        
-        
+      </div>
     </div>
-    
-    
-    <app-img-rightbar class="fixed(0,0)"></app-img-rightbar>
+  </div>
+  <app-img-rightbar></app-img-rightbar>
 </div>
