--- a/src/app/_components/sidebar/sidebar.component.html
+++ b/src/app/_components/sidebar/sidebar.component.html
@@ -22,7 +22,7 @@
     </div>
   </div>
 
-  <div class="vbox w(230) r(10) items pointer">
+  <div class="vbox w(230) r(10) items pointer" (click)="toggleMenu()">
     <div class="hbox space-between w(100%) p(10)">
       <span class="font(20) Inter c(#fff)">IMAGES<br /></span>
       <svg
@@ -35,7 +35,7 @@
         <path d="M6.5 12L0.00480938 0.75L12.9952 0.75L6.5 12Z" fill="white" />
       </svg>
     </div>
-    <div class="vbox(left) w(100%) ml(30) gap(3)" #ImageList>
+    <div class="vbox(left) w(100%) ml(30) gap(3)" #ImageList *ngIf="isMenuOpen">
       <li class="color(grey) font(18)" style="list-style: none">
         - Text to Image
       </li>
