--- a/src/app/_routes/route-playground/route-playground.component.html
+++ b/src/app/_routes/route-playground/route-playground.component.html
@@ -4,12 +4,7 @@
   </header>
   <div class="hbox h(100%) w(100%)">
     <app-sidebar class="h(100%)"></app-sidebar>
-    <!-- <app-playground-home
-      class="relative w(calc(100vw-270px)) h(100%)"
-    ></app-playground-home> -->
-    <!-- Mark : 이거 width 100% 채우면 헤더 범위 벗어나는데 이 부분 수정 부탁드립니다,,, -->
-    
-    <app-text-to-image class="w(100%) h(100%)"></app-text-to-image>
-
+    <app-playground-home class="relative w(calc(100vw-270px)) h(100%)" ></app-playground-home>
+    <!-- <app-text-to-image class="w(100%) h(100%)"></app-text-to-image>  -->
   </div>
 </div>
