--- a/src/app/_routes/route-playground/route-playground.component.html
+++ b/src/app/_routes/route-playground/route-playground.component.html
@@ -9,7 +9,7 @@
     ></app-playground-home> -->
     <!-- Mark : 이거 width 100% 채우면 헤더 범위 벗어나는데 이 부분 수정 부탁드립니다,,, -->
     
-    <app-text-to-image class="w(100%) h(100%)"></app-text-to-image>
+    <app-text-to-picasso class="w(100%) h(100%)"></app-text-to-picasso>
 
   </div>
 </div>
