--- a/src/app/_components/header/header.component.html
+++ b/src/app/_components/header/header.component.html
@@ -25,7 +25,10 @@
     >
       Gallery
     </div>
-    <div class="font(20) Inter c(#fff) mr(20%) pointer">Boards</div>
+    <div 
+      class="font(20) Inter c(#fff) mr(20%) pointer"
+      (click)="onClickRouter('boards')"
+    >Boards</div>
   </div>
 
   <div class="hbox">
