playground route 처리

--- a/src/app/_components/sidebar/sidebar.component.html
+++ b/src/app/_components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
-<aside class="vbox w(270) h(100%) bg(black) p(20)">
-  <div class="vbox w(230) r(10) items pointer " (click)="toggleMenu('videos')">
-    <div class="hbox space-between w(100%) p(10)">
+<nav class="vbox w(270) h(100%) bg(black) p(20)">
+  <div class="vbox w(230) r(10) items pointer ">
+    <div class="hbox space-between w(100%) p(10)" (click)="toggleMenu('videos')">
       <span class="font(20) Inter c(#fff)">VIDEOS<br /></span>
       <svg
         width="13"
@@ -22,8 +22,8 @@
     </div>
   </div>
 
-  <div class="vbox w(230) r(10) items pointer" (click)="toggleMenu('images')">
-    <div class="hbox space-between w(100%) p(10)">
+  <div class="vbox w(230) r(10) items pointer">
+    <div class="hbox space-between w(100%) p(10)" (click)="toggleMenu('images')">
       <span class="font(20) Inter c(#fff)">IMAGES<br /></span>
       <svg
         width="13"
@@ -68,4 +68,4 @@
       <span class="font(20) Inter c(#fff)">WORKSPACE<br /></span>
     </div>
   </div>
-</aside>
+</nav>
