--- a/src/app/_routes/route-playground/route-playground.component.html
+++ b/src/app/_routes/route-playground/route-playground.component.html
@@ -6,7 +6,7 @@
 
     <div class="relative w(calc(100vw-270px)) h(100%) bg(#1a1a1a)">
       <ng-template #content></ng-template>
-      <app-img-rightbar></app-img-rightbar>
+      <!-- <app-img-rightbar></app-img-rightbar> -->
     </div>
   </div>
 </div>
