--- a/src/app/_components/img-rightbar/img-rightbar.component.html
+++ b/src/app/_components/img-rightbar/img-rightbar.component.html
@@ -1,14 +1,12 @@
 <div class="right-sidebar scroll-y">
-  <div class="vbox w(100%) h(100%) p(15)">
-    <div class="w(75) h(30) font(18) c(white)">
-      <p>Model</p>
-    </div>
-    <div class="h(40)">
+  <div class="vbox w(100%) h(100%)">
+    <div class="w(100%) p(5/15)">
+      <p class="font(18) c(#A3A3A3)">Model</p>
       <form>
         <select
-          class="bg(#4B4B4B) w(300) h(40) r(6) font(15) bold c(white) p(8)"
+          class="bg(#4B4B4B) w(300) h(35) r(6) font(15) bold c(white) p(8)"
         >
-          <option value="none"><p>==선택==</p></option>
+          <option value="none"><p>MidJourney V4</p></option>
           <option value="one"><p>1</p></option>
           <option value="two"><p>2</p></option>
           <option value="three"><p>3</p></option>
@@ -16,69 +14,74 @@
       </form>
     </div>
 
-    <div class="font(18) c(white)"><p>Prompt</p></div>
-    <textarea
-      type="text"
-      class="font(15) c(white) w(300) h(130) bg(#4B4B4B) r(6) p(8) b(1/grey)"
-    ></textarea>
-    <div class="font(18) c(white)">
-      <p>Negative prompt</p>
+    <div class="bt(1/grey) bb(1/grey) p(5/15)">
+      <div class="font(16) c(white)"><p>> Prompt</p></div>
+      <textarea
+        type="text"
+        class="font(15) c(white) w(300) h(130) bg(#4B4B4B) r(6) p(8) b(1/grey)"
+      ></textarea>
+      <div class="font(16) c(white)">
+        <p>> Negative prompt</p>
+      </div>
+      <textarea
+        type="text"
+        class="font(15) c(white) w(300) h(35) bg(#4B4B4B) r(6) p(8) b(1/grey)"
+      ></textarea>
     </div>
-    <textarea
-      type="text"
-      class="font(15) c(white) w(300) h(100) bg(#4B4B4B) r(6) p(8) b(1/grey)"
-    ></textarea>
-    <div class="font(18) c(white)">
-      <p>Guidance Scales</p>
-    </div>
-    <input
-      type="number"
-      class="font(15) c(white) w(300) h(35) bg(#4B4B4B) r(6) p(8) b(1/grey)"
-    />
-    <div class="font(18) c(white)">
-      <p>Steps</p>
-    </div>
-    <input
-      type="number"
-      class="font(15) c(white) w(300) h(35) bg(#4B4B4B) r(6) p(8) b(1/grey)"
-    />
-    <div class="font(18) c(white)">
-      <p>Scheduler</p>
-    </div>
-    <input
-      type="text"
-      class="font(15) c(white) w(300) h(35) bg(#4B4B4B) r(6) p(8) b(1/grey)"
-    />
-    <div class="w(62) h(30) font(18) c(white)">
-      <p>Seed</p>
-    </div>
-    <input
-      type="number"
-      class="font(15) c(white) w(300) h(35) bg(#4B4B4B) r(6) p(8) b(1/grey)"
-    />
-    <div class="w(316) h(30) font(18) c(white)">
-      <p>Size (min:512, max:1024)</p>
-    </div>
-    <div class="hbox mb(30)">
-      <div class="w(50) h(30) font(18) c(white)">
-        <p>width</p>
+    <div class="pl(15) bb(1/grey)">
+      <p class="font(20) c(#A3A3A3)">Settings</p>
+      <div class="font(16) c(white)">
+        <p>> Guidance Scales</p>
       </div>
       <input
         type="number"
-        class="w(90) h(35) font(15) c(white) bg(#4B4B4B) r(10) b(1/grey) p(8)"
-        value="512"
+        class="font(15) c(white) w(300) h(35) bg(#4B4B4B) r(6) p(8) b(1/grey)"
       />
-      <div class="w(55) h(30) ml(15) font(18) c(white)">
-        <p>height</p>
+      <div class="font(16) c(white)">
+        <p>> Steps</p>
       </div>
       <input
         type="number"
-        class="w(90) h(35) font(15) c(white) bg(#4B4B4B) r(10) b(1/grey) p(8)"
-        value="512"
+        class="font(15) c(white) w(300) h(35) bg(#4B4B4B) r(6) p(8) b(1/grey)"
       />
+      <div class="font(16) c(white)">
+        <p>> Scheduler</p>
+      </div>
+      <input
+        type="text"
+        class="font(15) c(white) w(300) h(35) bg(#4B4B4B) r(6) p(8) b(1/grey)"
+      />
+      <div class="w(62) h(30) font(16) c(white)">
+        <p>> Seed</p>
+      </div>
+      <input
+        type="number"
+        class="font(15) c(white) w(300) h(35) bg(#4B4B4B) r(6) p(8) b(1/grey)"
+      />
+      <div class="w(316) h(30) font(16) c(white)">
+        <p>> Size</p>
+      </div>
+      <div class="hbox mb(10)">
+        <div class="w(50) h(28) font(16) c(white)">
+          <p>width</p>
+        </div>
+        <input
+          type="number"
+          class="w(90) h(35) font(15) c(white) bg(#4B4B4B) r(10) b(1/grey) p(8)"
+          value="512"
+        />
+        <div class="w(55) h(30) ml(15) font(16) c(white)">
+          <p>height</p>
+        </div>
+        <input
+          type="number"
+          class="w(90) h(35) font(15) c(white) bg(#4B4B4B) r(10) b(1/grey) p(8)"
+          value="512"
+        />
+      </div>
     </div>
     <div
-      class="w(300) h(50) bg(linear-gradient(180deg,#744efc/0%,#8233ca/100%)) r(6) font(18) bold c(white) pack pointer mb(20)"
+      class="w(300) h(50) bg(linear-gradient(180deg,#744efc/0%,#8233ca/100%)) r(6) font(18) bold c(white) pack pointer m(15)"
     >
       <p>Generate</p>
     </div>
