--- a/src/app/_components/text-to-image/text-to-image.component.html
+++ b/src/app/_components/text-to-image/text-to-image.component.html
@@ -1,14 +1,34 @@
-<div class="w(100%) h(100%) bg(#1A1A1A) scroll p(20)">
+<div class="w(100%) h(100%) bg(#1A1A1A) scroll ml(150) p(20)">
   <div class="font(30) Inter Semi Bold c(white) mb(20)">
     <p>Text to Image</p>
   </div>
 
   <div class="relative w(799) h(768) ml(20)">
     <div class="absolute w(799) hbox(top) flex-wrap gap(33)">
-      <div class="w(350) h(350) bg(#d9d9d9) b(1/white)"></div>
-      <div class="w(350) h(350) bg(#d9d9d9) b(1/white)"></div>
-      <div class="w(350) h(350) bg(#d9d9d9) b(1/white)"></div>
-      <div class="w(350) h(350) bg(#d9d9d9) b(1/white)"></div>
+      <div class="w(350) h(350) bg(#d9d9d9) b(1/white)">
+        <img
+          src="https://cdn.stability.ai/assets/org-DxezXSXyawnIqWzDTdTQSICQ/00000000-0000-0000-0000-000000000000/85a65863-729d-bb7e-59c3-61a16b9b2e6b"
+          alt=""
+        />
+      </div>
+      <div class="w(350) h(350) bg(#d9d9d9) b(1/white)">
+        <img
+          src="https://cdn.stability.ai/assets/org-DxezXSXyawnIqWzDTdTQSICQ/00000000-0000-0000-0000-000000000000/85a65863-729d-bb7e-59c3-61a16b9b2e6b"
+          alt=""
+        />
+      </div>
+      <div class="w(350) h(350) bg(#d9d9d9) b(1/white)">
+        <img
+          src="https://cdn.stability.ai/assets/org-DxezXSXyawnIqWzDTdTQSICQ/00000000-0000-0000-0000-000000000000/85a65863-729d-bb7e-59c3-61a16b9b2e6b"
+          alt=""
+        />
+      </div>
+      <div class="w(350) h(350) bg(#d9d9d9) b(1/white)">
+        <img
+          src="https://cdn.stability.ai/assets/org-DxezXSXyawnIqWzDTdTQSICQ/00000000-0000-0000-0000-000000000000/85a65863-729d-bb7e-59c3-61a16b9b2e6b"
+          alt=""
+        />
+      </div>
     </div>
   </div>
 </div>
